--- a/index.html
+++ b/index.html
@@ -2,248 +2,274 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Time tracking dashboard</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-  body {
-  font-family: 'Rubik', sans-serif;
-  background-color: hsl(226, 43%, 10%);
-  color: hsl(236, 100%, 87%);
-  padding: 0;
-  display: flex;
-  justify-content: center;
-;
-  }
+    body {
+      font-family: 'Rubik', sans-serif;
+      background-color: hsl(226, 43%, 10%);
+      color: white;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 5rem 1.5rem;
+    }
 
-.profile {
-  background-color: hsl(235, 46%, 20%);
-  border-radius: 15px;
-  padding: 20px;
-}
-.report-title {
-  grid-row: 1 / span 2;
-  grid-column: 1 / span 2;
-  background-color: hsl(235, 46%, 20%);
-  border-radius: 15px;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 20px;
-  margin-bottom: 20px;
-}
-.report-title .profile-picture {
-  background-color: hsl(246, 80%, 60%);
-  padding: 2rem 1.5rem;
-  border-radius: 15px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
+    .container {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 1.5rem;
+      max-width: 1100px;
+      width: 100%;
+    }
 
-.report-title .profile-picture img {
-  width: 60px;
-  border: 3px solid #fff;
-  border-radius: 50%;
-  margin-bottom: 1.5rem;
-}
+    .profile-section {
+      grid-row: 1 / span 2;
+      grid-column: 1;
+    }
 
-.report-title p {
-  font-size: 0.9rem;
-  color: hsl(236, 100%, 87%);
-}
+    .profile-card {
+      background-color: hsl(235, 46%, 20%);
+      border-radius: 15px;
+      height: 100%;
+    }
 
-.report-title .report-name {
-  font-size: 1.8rem;
-  font-weight: 300;
-  color: #fff;
-}
+    .profile-info {
+      background-color: hsl(246, 80%, 60%);
+      border-radius: 15px;
+      padding: 2rem;
+      height: 70%;
+    }
 
-.timeframe {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 1.5rem;
-  gap: 20px;
-  margin-bottom: 20px;
-    padding: 20px;
-}
-.timeframe a {
-  text-decoration: none;
-  color: hsl(236, 100%, 87%);
-  font-size: 0.9rem;
-  transition: color 0.3s ease;
-}
-.work{
-display: flex;
-flex-direction: column;
-grid-row: 2 / span 1;
-grid-column: 2 / span 1;
-gap: 20px;
-margin-bottom: 20px;
-padding: 20px;
-}
-.workimage {
-  background-color: hsl(15, 100%, 70%);
-}
-.play{
-  display: flex;
-  flex-direction: column;
-  grid-row: 1 / span 1;
-  grid-column: 1 / span 1;
-  gap: 20px;
-  margin-bottom: 20px;
-  padding: 20px;  
-}
-.playimage {
-  background-color: hsl(195, 74%, 62%);
-}
-.study{
-  display: flex;
-  flex-direction: column;
-  grid-row: 1 / span 1;
-  grid-column: 4 / span 1;
-  gap: 20px;
-  margin-bottom: 20px;
-  padding: 20px;
-}
-.studyimage {
-  background-color: hsl(348, 100%, 68%);
-}
-.exercise{
-  display: flex;
-  flex-direction: column;
-  grid-row: 2 / span 1;
-  grid-column: 2 / span 1;
-  gap: 20px;
-  margin-bottom: 20px;
-  padding: 20px;
-}
-.exerciseimage {
-  background-color: hsl(145, 58%, 55%);
-}
-.social{
-  display: flex;    
-  flex-direction: column;
-  grid-row: 2 / span 1;
-  grid-column: 3 / span 1;
-  gap: 20px;
-  margin-bottom: 20px;
-  padding: 20px;
-}   
-.socialimage {
-  background-color: hsl(264, 64%, 52%);
-}
-.self-care{
-  display: flex;    
-  flex-direction: column;
-  grid-row: 2 / span 1;
-  grid-column: 4 / span 1;
-  gap: 20px;
-  margin-bottom: 20px;
-  padding: 20px;
-}
-.selfcareimage {
-  background-color: hsl(43, 84%, 65%);
-}
-.container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 20px;
-  gap: 1.3rem;
-  max-width: 1100px;
-  width: 100%;
-}
-.activities {
-  display: flex;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 20px;
-  gap: 1.3rem;
-  max-width: 1100px;
-  width: 100%;
-}
+    .profile-picture {
+      width: 80px;
+      border: 3px solid white;
+      border-radius: 50%;
+      margin-bottom: 2.5rem;
+    }
+
+    .report-for {
+      font-size: 0.9rem;
+      color: hsl(236, 100%, 87%);
+      margin-bottom: 0.5rem;
+    }
+
+    .profile-name {
+      font-size: 2.5rem;
+      font-weight: 300;
+      line-height: 1.2;
+    }
+
+    .timeframes {
+      padding: 1.5rem 2rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    .timeframes a {
+      text-decoration: none;
+      color: hsl(235, 45%, 61%);
+      font-size: 1rem;
+      cursor: pointer;
+    }
+    .timeframes a:hover, .timeframes a.active {
+      color: white;
+    }
+    .activity-card {
+      border-radius: 15px;
+      margin-top: 2.5rem;
+    }
+    .activity-icon img {
+      width: 70px;
+    }
+    .activity-content {
+      background-color: hsl(235, 46%, 20%);
+      border-radius: 15px;
+      padding: 1.5rem;
+      height: 80%;
+      margin-top: 2rem;
+    }
+    .activity-content:hover {
+      background-color: hsl(235, 45%, 30%);
+    }
+    .activity-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 1rem;
+    }
+    .activity-title {
+      font-size: 1.1rem;
+      font-weight: 500;
+    }
+    .activity-menu {
+      color: hsl(236, 100%, 87%);
+      font-size: 1.5rem;
+    }
+    .activity-hours {
+      font-size: 3rem;
+      font-weight: 300;
+      margin-bottom: 0.5rem;
+    }
+    .activity-previous {
+      font-size: 0.9rem;
+      color: hsl(236, 100%, 87%);
+    }
+    .work-bg {
+      background-color: hsl(15, 100%, 70%);
+    }
+
+    .play-bg {
+      background-color: hsl(195, 74%, 62%);
+    }
+
+    .study-bg {
+      background-color: hsl(348, 100%, 68%);
+    }
+
+    .exercise-bg {
+      background-color: hsl(145, 58%, 55%);
+    }
+
+    .social-bg {
+      background-color: hsl(264, 64%, 52%);
+    }
+
+    .self-care-bg {
+      background-color: hsl(43, 84%, 65%);
+    }
+
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+      margin-top: 3rem;
+      grid-column: 1 / -1;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+      text-decoration: none;
+    }
+
+
   </style>
 </head>
 <body>
-<div>
-  <div class="report-title">
-    <div class="profile-picture">
-      <img src="./images/image-jeremy.png" alt="Jeremy Robson">
+  <div class="container">
+    <div class="profile-section">
+      <div class="profile-card">
+        <div class="profile-info">
+          <img src="./images/image-jeremy.png" alt="Jeremy Robson" class="profile-picture">
+          <div>
+            <p class="report-for">Report for</p>
+            <h1 class="profile-name">Jeremy Robson</h1>
+          </div>
+        </div>
+        <div class="timeframes">
+          <a href="#" class="active">Daily</a>
+          <a href="#">Weekly</a>
+          <a href="#">Monthly</a>
+        </div>
+      </div>
     </div>
-    <p>Report for</p>
-  <div class="report-name">Jeremy Robson
-  </div>
 
-<div class="timeframe">
-   <a href="#">Daily</a>
-   <a href="#">Weekly</a>
-   <a href="#">Monthly</a>
+    <div class="activity-card work-bg">
+      <div class="activity-icon">
+        <img src="./images/icon-work.svg" alt="Work Icon">
+      </div>
+      <div class="activity-content">
+        <div class="activity-header">
+          <h2 class="activity-title">Work</h2>
+          <div class="activity-menu">...</div>
+        </div>
+        <div class="activity-hours">32hrs</div>
+        <div class="activity-previous">Last Week - 36hrs</div>
+      </div>
+    </div>
 
-</div>
-</div>
-  <div class="Activities">
-<div class = "work">
-  <div class="workimage">
-    <img src="./images/icon-work.svg" alt="Work Icon">
-  </div>
-  <h1>Work</h1>
-  <h2>32hrs</h2> <!-- weekly -->
-  <p>last week - 36hrs</p> <!-- weekly -->
+    <div class="activity-card play-bg">
+      <div class="activity-icon">
+        <img src="./images/icon-play.svg" alt="Play Icon">
+      </div>
+      <div class="activity-content">
+        <div class="activity-header">
+          <h2 class="activity-title">Play</h2>
+          <div class="activity-menu">...</div>
+        </div>
+        <div class="activity-hours">10hrs</div>
+        <div class="activity-previous">Last Week - 8hrs</div>
+      </div>
+    </div>
 
-</div>
-<div class="play">
-  <div class="playimage">
-    <img src="./images/icon-play.svg" alt="Play Icon">
-  </div>
-  <h1>Play</h1>
-  <h2>10hrs</h2> <!-- weekly -->
-  <p>last week - 8hrs</p> <!-- weekly -->
-</div>
-<div class="study">
-  <div class="studyimage">
-    <img src="./images/icon-study.svg" alt="Study Icon">
-  </div>
-  <h1>Study</h1>
-  <h2>4hrs</h2> <!-- daily -->
-  <p>last week - 7hrs</p> <!-- weekly -->
-</div>
-  </div>
+    <div class="activity-card study-bg">
+      <div class="activity-icon">
+        <img src="./images/icon-study.svg" alt="Study Icon">
+      </div>
+      <div class="activity-content">
+        <div class="activity-header">
+          <h2 class="activity-title">Study</h2>
+          <div class="activity-menu">...</div>
+        </div>
+        <div class="activity-hours">4hrs</div>
+        <div class="activity-previous">Last Week - 7hrs</div>
+      </div>
+    </div>
 
-  <div class="exercise">
-  <div class="exerciseimage">
-    <img src="./images/icon-exercise.svg" alt="Exercise Icon">
-  </div>
-  <h2>Exercise</h2>
-  <h2>4hrs</h2> <!-- weekly -->
-  <p>last week - 5hrs</p> <!-- weekly -->
+    <div class="activity-card exercise-bg">
+      <div class="activity-icon">
+        <img src="./images/icon-exercise.svg" alt="Exercise Icon">
+      </div>
+      <div class="activity-content">
+        <div class="activity-header">
+          <h2 class="activity-title">Exercise</h2>
+          <div class="activity-menu">...</div>
+        </div>
+        <div class="activity-hours">4hrs</div>
+        <div class="activity-previous">Last Week - 5hrs</div>
+      </div>
+    </div>
 
-  <div class="social">
-  <div class="socialimage">
-    <img src="./images/icon-social.svg" alt="Social Icon">
-  </div>  
-  <h2>Social</h2>
-  <h2>5hrs</h2> <!-- daily -->
-  <p>last week - 10hrs</p> <!-- daily -->
-  </div>
-  <div class="self-care">
-  <div class="selfcareimage">
-    <img src="./images/icon-self-care.svg" alt="Self Care Icon">
-  </div>  
-  <h2>Self Care</h2>
-  <h2>2hrs</h2> <!-- weekly -->
-  <p>last week - 2hrs</p> <!-- weekly -->
-</div>
-</div>
-</div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div class="activity-card social-bg">
+      <div class="activity-icon">
+        <img src="./images/icon-social.svg" alt="Social Icon">
+      </div>
+      <div class="activity-content">
+        <div class="activity-header">
+          <h2 class="activity-title">Social</h2>
+          <div class="activity-menu">...</div>
+        </div>
+        <div class="activity-hours">5hrs</div>
+        <div class="activity-previous">Last Week - 10hrs</div>
+      </div>
+    </div>
+
+    <div class="activity-card self-care-bg">
+      <div class="activity-icon">
+        <img src="./images/icon-self-care.svg" alt="Self Care Icon">
+      </div>
+      <div class="activity-content">
+        <div class="activity-header">
+          <h2 class="activity-title">Self Care</h2>
+          <div class="activity-menu">...</div>
+        </div>
+        <div class="activity-hours">2hrs</div>
+        <div class="activity-previous">Last Week - 2hrs</div>
+      </div>
+    </div>
+
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
   </div>
 </body>
 </html>
